<resources>
    <string name="app_name">Jump Manga</string>

    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="drawer_new">New</string>
    <string name="downloaded">Downloaded</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="detail_placeholder">Thể loại:\nTác giả:\nTình trạng:\nNguồn:\nLượt xem:\nNgày đăng:</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_exception">Exception</string>
    <string name="title_activity_setting">Settings</string>
    <string name="send">Send this report</string>
    <string name="quit">Exit</string>
    <string name="search_hint">Search…</string>
    <string name="category">Category</string>
    <string name="personal">Personal</string>
    <string name="feeds">My feeds</string>
    <string name="action_settings">Settings</string>
    <string name="loading">LOADING</string>
    <string name="empty">EMPTY</string>
    <string name="size_info">Space taken: </string>
    <string name="confirm_delete">Do you really want to delete this manga and all of its chapters?</string>
    <string name="pref_download_title">Number of concurrent downloads</string>
    <string name="pref_download_summary">Lower this if you experience any issue</string>
    <string name="pref_show_notification_title">Show downloads on status bar</string>
    <string name="pref_show_notification_summary">Uncheck this if you don\'t want to flood the status bar with notifications</string>
    <string name="pref_update_frequency_title">Check for new chapter frequency</string>
    <string name="pref_update_frequency_summary">Recommend to leave it at the default value</string>
    <string name="no_fav_manga">No favorite manga</string>
    <string name="last_page">This is the last page!</string>
    <string name="manga_fav">Manga favorited</string>
    <string name="manga_unfav">Manga unfavorited</string>
    <string name="chapter_fav">Successfully favorited this chapter</string>
    <string name="chapter_unfav">Successfully unfavorited this chapter</string>
    <string name="info_retrieve_failed">Failed to retrieve manga info!</string>
    <string name="chapter_retrieve_failed">Failed to retrieve chapter list!</string>
    <string name="no_fav_chapter">You have no favorite chapter for this manga!</string>
    <string name="refresh_list">Refreshing list, please wait…</string>
    <string name="info">Information</string>
    <string name="preparing_chapter">Picking up where you left off…</string>
    <string name="network_error">Please check your network!</string>
    <string name="first_chapter">This is the first chapter</string>
    <string name="last_chapter">This is the last chapter</string>
    <string name="empty_fragment">There doesn\'t seem to be anything here</string>
    <string name="download_empty">You have to download something first</string>
    <string name="plot">Plot</string>
    <string name="chapter">Chapter</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="title_activity_about">About</string>
    <string name="my_facebook">My Facebook</string>
    <string name="facebook_url">zenith.wyrm</string>
    <string name="my_twitter">My Twitter</string>
    <string name="twitter_url">\@wyrmise</string>
    <string name="general_pref">General</string>
    <string name="licenses">Licenses and libraries</string>
    <string name="mit_license">MIT License</string>
    <string name="apache_license">Apache License 2.0</string>
    <string name="android_support_library">Android support library, revision 22.2.0</string>
    <string name="picasso">Picasso</string>
    <string name="sqlite_asset">SQLiteAssetHelper</string>
    <string name="butterknife">Butter Knife</string>
    <string name="expandable_rv">Expandable RecyclerView</string>
    <string name="jsoup">jsoup</string>
    <string name="feedback">If you have any feedback or suggestion, please contact me via these addresses:</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">Jump Manga is developed by me, an individual, who does not have any affliation with Manga24h or the content providers of the manga available in the application.</string>
    <string name="app_version">App version</string>
    <string name="version_name">3.4.1</string>
    <string name="background_progress">Background downloads in progress…</string>
    <string name="downloading">Downloading:</string>
    <string name="queuing">In queue:</string>
    <string name="download_completed">Download completed:</string>
    <string name="download_failed">Download failed:</string>
    <string name="background_completed">Background task completed</string>
    <string name="preload_title">Auto download (Beta)</string>
    <string name="preload_summary">Whenever a new chapter of your favorite manga is found, it will be automatically downloaded for offline reading</string>

</resources>
