<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/category"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_new"
            android:icon="@drawable/ic_action_new"
            android:title="@string/drawer_new" />

        <item
            android:id="@+id/drawer_category"
            android:icon="@drawable/ic_action_more"
            android:title="@string/category" />

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@drawable/ic_action_favorite_black"
            android:title="@string/favourite" />

        <item
            android:id="@+id/drawer_feeds"
            android:icon="@drawable/ic_action_feed"
            android:title="@string/feeds"/>

        <item
            android:id="@+id/drawer_recent"
            android:icon="@drawable/ic_action_recent"
            android:title="@string/recent" />

        <item
            android:id="@+id/drawer_downloaded"
            android:icon="@drawable/ic_action_downloaded"
            android:title="@string/downloaded"/>

    </group>

    <item
        android:id="@+id/drawer_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings" />
</menu>